--- a/app/src/main/res/layout/activity_test_5g_msg.xml
+++ b/app/src/main/res/layout/activity_test_5g_msg.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textColor="#FF333333"
+                android:text="@string/test_based_on_SIM_card"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
